  - [ ] group deatil: show quality score

# 2025-01-23, 2025-01-24

- [ ] tg login
  - [ ] backend db
- [x] add account 
  - [ ] get code UI 
  - [ ] redis.lpush(request)
  - [ ] redis.set(phone_code)
  - [ ] redis.get(phone_code_status), status: success, error, cancel.

- [ ] table: category, 
  - [x] fix quality_score
  - [x] add category multi-select
  - [x] fix entity


- [ ] detailed view: 
  - [x] add category
  - [x] add quality
  - [x] members
  - [x] ai_about
  - [x] remove monitor bot
  - [x] add account
  - [x] fix entity
  - [x] add pinned messages
  - [x] add latest messages

# 2025-01-25

- [ ] dashboard 
  - [x] show message use markdown
  - [x] show message add message reactions 和 message buttons
  - [x] show message del sender_id, message_id
  - [x] add category show table
  - [x] fix filter from global data
  - [ ] kol社群这块需要加个1. 各个判断标准和相应得分 2. 给项目方打广告的记录和次数 3. KOL的风格总结

# 2025-01-26

- [ ] dashboard 
  - [x] add account multi-select 
  - [x] add category ai icon
  - [x] mannual update category
  - [x] improve update category

# 2025-02-06

 - [ ] dashboard
  - [x] public page(/home): 不用login也能看到的页面，默认显示所有群的信息，不含account信息
  - [x] 登陆后，可以看到我们的账号和账号下面所有的群，这个就是我们目前的dashboard，自己的群别人看不到
  - [x] 用户可以看到自己的群，并且选择哪些群enable(then: private/public)，哪些群不enable（默认都enable）， enable 完以后我们就开始做分析
  - [ ] 用户可以选择自己的promopt来summary群，我们给一个默认的prompt

# 2025-02-07

- [ ] dashboard
  - [x] UI: general sort, filter, search 
  - [x] UI: navigation bar top
  - [ ] UI: mobile auto responsive
  - [x] UI: login dialog
  - [x] UI: logo and favicon
  - [x] email+code login by xiangnuan
  - [ ] user add group: add tg_link
  - [x] fix: table layout 

# 2025-02-08

- [ ] dashboard
  - [x] UI: mobile auto responsive
  - [x] hide email login
  - [x] user add group: add tg_link
  - [x] login default home page remove overview page
  - [x] unify layout
  - [ ] fix mobile view: for group info + messages
  - [ ] remove table sort header
  - [ ] remove table title