@@ -241,9 +241,8 @@ export function GroupsTable({
 
   return (
     <Card className="border-0">
-      <CardHeader>
-        <CardTitle>Telegram Groups</CardTitle>
-        {showCheckboxes && (
+      {showCheckboxes && selectedChats.length > 0 && (
+        <CardHeader>
           <div className="flex items-center gap-2">
             <span className="text-sm text-muted-foreground">
               {selectedChats.length} selected
@@ -279,8 +278,8 @@ export function GroupsTable({
               </Button>
             )}
           </div>
-        )}
-      </CardHeader>
+        </CardHeader>
+      )}
       <CardContent>
         <Table>
           <TableHeader>
